fixed scrolling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,13 @@
     }
 }
 
+/* Fix overflow */
+html,
+body {
+    -webkit-overflow-scrolling: touch;
+    overscroll-behavior-y: none;
+}
+
 body {
     font-family: 'Rambla';
     background: var(--background);
